# oushcode

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
caddy/: Caddyfile
fixtures/events/: check_suite_completed.json  ci_completed.json  issue_opened.json  pr_opened.json
scripts/: simulate_webhook.py
src/agent/: config.py
src/agent/agents/: code_agent.py  reviewer_agent.py
src/agent/cli/: main.py
src/agent/github/: auth.py  client.py
src/agent/jobs/: enqueue.py  handlers.py
src/agent/llm/: openrouter.py
src/agent/server/: app.py  ui.py
src/agent/storage/: db.py
src/agent/tools/: git_ops.py  local_tools.py  registry.py  reviewer_tools.py
src/agent/worker/: runner.py
